--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "auth0": "^4.2.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.0",
+    "forever-agent": "^0.6.1",
     "helmet": "^7.1.0",
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
     "morgan": "^1.10.0",
-    "next": "^13.5.1",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "nodemon": "^3.0.0",
+    "openid-client": "^5.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "^3.0.1",
     "reactstrap": "^9.1.5"
   },
   "devDependencies": {
@@ -42,6 +47,7 @@
     "@testing-library/react": "^14.1.0",
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.0",
+    "encoding": "^0.1.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
