--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "auth0": "^4.2.0",
+    "chart.js": "^4.4.1",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -36,6 +37,7 @@
     "nodemon": "^3.0.0",
     "openid-client": "^5.6.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
     "reactstrap": "^9.1.5"
